--- a/about-me.ipynb
+++ b/about-me.ipynb
@@ -20,16 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! My name is Sara Marin. I’m excited to learn because Because it's the professional future; every day there's more room for development. . A fun fact about me is: I enjoy learning new things and challenging myself.\n"
+     ]
+    }
+   ],
    "source": [
     "# About Me\n",
     "# Please fill in the following details.\n",
     "\n",
-    "name = \"Your Name Here\"\n",
-    "reason = \"Why you are interested in AI, Data Analytics, or Data Science\"\n",
-    "fun_fact = \"One fun fact about yourself or a goal for this course\"\n",
+    "name = \"Sara Marin\"\n",
+    "reason = \"Because it's the professional future; every day there's more room for development. \"\n",
+    "fun_fact = \"I enjoy learning new things and challenging myself\"\n",
     "\n",
     "print(f\"Hi! My name is {name}. I’m excited to learn because {reason}. A fun fact about me is: {fun_fact}.\")"
    ]
@@ -37,7 +45,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,9 +59,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
